--- a/app3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
+++ b/app3/src/app/home/incluir-publicacao/incluir-publicacao.component.html
@@ -1,7 +1,7 @@
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content" *ngIf="progressoPublicacao !== 'concluido'">
+    <div class="modal-content" >
       <form [formGroup]="formulario" (ngSubmit)="publicar()">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Criar uma publicação</h5>
@@ -10,14 +10,20 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="progress" *ngIf="progressoPublicacao === 'andamento'">
+          <div *ngIf="progressoPublicacao !== 'pendente'">
+            <div class="progress" *ngIf="progressoPublicacao === 'andamento'" style="margin-bottom: 15px;">
                 <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" [style.width]="porcentagemUpload + '%'" [attr.aria-valuenow]="porcentagemUpload" aria-valuemin="0" aria-valuemax="100">{{porcentagemUpload}}%</div>
             </div>
+            <div class="alert alert-primary" *ngIf="progressoPublicacao === 'concluido'" role="alert">
+              Publicação salva com sucesso!
+            </div>
+          </div>
             <input
             type="file"
             accept="image/*"
             class="form-control"
             (change)="preparaImagemUpload($event)"
+            style="margin-bottom: 30px;"
             >
           <input
             type="text"
@@ -28,37 +34,10 @@
           
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          <button type="button" (click)="resetarForm()" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
           <button type="submit" class="btn btn-primary">Publicar</button>
         </div>
       </form>
     </div>
-    <!-- <div class="modal-content" *ngIf="progressoPublicacao === 'andamento'">
-     
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Publicação em andamento</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Progresso: {{porcentagemUpload}}%
-            
-          </div>
-       
-      </div> -->
-      <div class="modal-content" *ngIf="progressoPublicacao === 'concluido'">
-     
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Publicação concluída</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <h3>Publicação foi realizada</h3>            
-          </div>
-       
-      </div>
   </div>
 </div>
